# MLZoomCamp

./: HW_1.ipynb  HW_3.ipynb
HW_5/: Dockerfile  predict_credit_model1.py  predict_credit_model2.py  pyproject.toml
HW_5/.ipynb_checkpoints/: HW_5-checkpoint.ipynb
