[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
authors = ["bakhtiyar-k <subetegaf@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.3.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
